[project]
name = "deep-profane"
version = "0.0.1"
authors = [
  { name="daoern", email="mail@daoern.com" },
]
description = "Profanity and offensive language detection using deep learning models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "keras",
    "requests",
    "tensorflow",
    "tensorflow_hub",
    "tensorflow_text",
    "tqdm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/daoern/deep-profane"
"Bug Tracker" = "https://github.com/daoern/deep-profane/issues"